# qlp

./: Cargo.toml  README.md  exec_curl.lua  format_json.lua
examples/: exec_curl.lua  format_table.lua  html2md.lua  pr_title.lua
src/: builtin.rs  clip.rs  error.rs  global_memory.rs  html.rs  main.rs  utils.rs  win_clipboard.rs
src/builtins/: builtin.rs  exec.rs  include.rs  json.rs  mod.rs  s.rs
