[package]
name = "qlp"
version = "0.1.0"
edition = "2024"

[features]
default = []
http = ["dep:chitose"]

[dependencies]
mlua = { version = "0.10", features = [
  "anyhow",
  "async",
  "lua54",
  "vendored",
  "macros",
  "serialize",
  "userdata-wrappers",
] }
# html5ever = "0.29"
# markup5ever = { version = "0.14" }
# markup5ever_rcdom = { version = "0.3" }
regex = { version = "1.11", features = ["use_std"] }
serde_json = "1.0.139"
windows = { version = "0.60.0", features = [
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_System_Memory",
] }
html5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
markup5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
markup5ever_rcdom = { git = "https://github.com/servo/html5ever.git", branch = "main" }
xml5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
clap = { version = "4.5", features = ["derive"] }
chitose = { version = "0.1", git = "https://github.com/s-aran/chitose.git", branch = "main", optional = true }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true
panic = 'abort'
incremental = false
overflow-checks = false

